--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,15 @@
 <!--  Last Published: Mon Aug 27 2018 10:10:06 GMT+0000 (UTC)  -->
 <html data-wf-page="5b8014b9dcf8e4613471a279" data-wf-site="5b8014b9dcf8e4312771a276">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124645718-2"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-124645718-2');
+  </script>
   <meta charset="utf-8">
   <title>Pay for anything, anywhere. Instantly.</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
