--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,20 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Nunito:regular","Noto Sans:regular,italic,700,700italic"]  }});</script>
   <!-- [if lt IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+
+<style type="text/css">
+  @media (max-width: 767px) {
+    .wrap-2 .screenshot {
+      width: 60%;
+    }
+    .wrap-2 .left-2 {
+      padding: 0px;
+    }
+    .wrap-2 .right-2 {
+      padding-top: 0;
+    }{
+  }
+  </style>
 </head>
 <body>
   <div class="hero-section">
@@ -40,10 +54,10 @@
         <h2 class="heading-2">What is Nano?</h2>
         <p class="paragraph-2">Nano is a digital currency for the real word - the fast and free way to pay for everything in life. It features instant transactions, zero fees and is infinitely scalable. Gone are the days of complicated and energy-inefficient transactions - Nano is <span class="text-span">green </span>and easy to use.</p>
       </div>
-      <div class="right-1"><img src="images/nano_earth.png" width="240" srcset="images/nano_earth-p-500.png 500w, images/nano_earth-p-800.png 800w, images/nano_earth-p-1080.png 1080w, images/nano_earth.png 1244w" sizes="(max-width: 479px) 72vw, (max-width: 767px) 74vw, (max-width: 991px) 32vw, 36vw" class="screenshot screenshot-what"></div>
+      <div class="right-1"><img src="images/nano_earth.png" width="240" srcset="images/nano_earth-p-500.png 500w, images/nano_earth-p-800.png 800w, images/nano_earth-p-1080.png 1080w, images/nano_earth.png 1244w" sizes="(max-width: 479px) 72vw, (max-width: 767px) 74vw, (max-width: 991px) 32vw, 36vw" class="screenshot screenshot-what" style="width: 80%;"></div>
     </div>
     <div class="wrap-2 b">
-      <div class="left-2"><img src="images/nano_block_lattice.png" width="240" srcset="images/nano_block_lattice-p-500.png 500w, images/nano_block_lattice.png 648w" sizes="(max-width: 479px) 85vw, 240px" class="screenshot"></div>
+      <div class="left-2"><img src="images/nano_block_lattice.png" width="240" srcset="images/nano_block_lattice-p-500.png 500w, images/nano_block_lattice.png 648w" sizes="(max-width: 479px) 85vw, 240px" class="screenshot" style=""></div>
       <div class="right-2">
         <h2 class="heading-2">What makes Nano?</h2>
         <p class="paragraph-2">Nano is a trustless, low-latency cryptocurrency that utilizes a novel block-lattice architecture, where each account has its own blockchain and achieves consensus via delegated Proof of Stake voting. The network requires minimal resources, no high-power mining hardware, and can process high transaction throughput.</p>
@@ -54,7 +68,7 @@
         <h2 class="heading-2">Where to buy Nano?</h2>
         <p class="paragraph-2">Nano is listed on a few major cryptocurrency exchanges, such as Binance, Kucoin, and Nanex. On these exchanges you can buy Nano with BTC, ETH, USDT, DOGE and many more. If you prefer to buy directly with fiat, Nano is listed in LBX and N.Exchange.</p>
       </div>
-      <div class="right-1"><img src="images/nano_where_to_buy.png" width="240" srcset="images/nano_where_to_buy-p-500.png 500w, images/nano_where_to_buy.png 536w" sizes="(max-width: 479px) 72vw, (max-width: 767px) 74vw, (max-width: 991px) 32vw, 36vw" class="screenshot screenshot-what"></div>
+      <div class="right-1"><img src="images/nano_where_to_buy.png" width="240" srcset="images/nano_where_to_buy-p-500.png 500w, images/nano_where_to_buy.png 536w" sizes="(max-width: 479px) 72vw, (max-width: 767px) 74vw, (max-width: 991px) 32vw, 36vw" class="screenshot screenshot-what" style="width:60%;"></div>
     </div>
   </div>
   <div class="store">
