--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,13 @@
 
       gtag('config', 'UA-124645718-2');
   </script>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+          new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-N6C8JQJ');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title>Pay for anything, anywhere. Instantly.</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -39,6 +46,10 @@
   </style>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N6C8JQJ"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <div class="hero-section">
     <div class="hero-wrap">
       <div class="hero-left"><img src="images/nano-logo.png" class="logo">
@@ -52,20 +63,20 @@
     <div class="wrap-2">
       <div class="left-1">
         <h2 class="heading-2">What is Nano?</h2>
-        <p class="paragraph-2">Nano is a digital currency for the real word - the fast and free way to pay for everything in life. It features near instant transactions, zero fees and is infinitely scalable. Gone are the days of complicated and energy-inefficient transactions - Nano is <span class="text-span">green </span>and easy to use.</p>
+        <p class="paragraph-2">Nano is a digital currency for the real word - the fast and free way to pay for everything in life. It features instant transactions, zero fees and is infinitely scalable. Gone are the days of complicated and energy-inefficient transactions - Nano is <span class="text-span">green </span>and easy to use.</p>
       </div>
       <div class="right-1"><img src="images/nano_earth.png" width="240" srcset="images/nano_earth-p-500.png 500w, images/nano_earth-p-800.png 800w, images/nano_earth-p-1080.png 1080w, images/nano_earth.png 1244w" sizes="(max-width: 479px) 72vw, (max-width: 767px) 74vw, (max-width: 991px) 32vw, 36vw" class="screenshot screenshot-what" style="width: 80%;"></div>
     </div>
     <div class="wrap-2 b">
       <div class="left-2"><img src="images/nano_block_lattice.png" width="240" srcset="images/nano_block_lattice-p-500.png 500w, images/nano_block_lattice.png 648w" sizes="(max-width: 479px) 85vw, 240px" class="screenshot" style=""></div>
       <div class="right-2">
-        <h2 class="heading-2">How does Nano work?</h2>
+        <h2 class="heading-2">What makes Nano?</h2>
         <p class="paragraph-2">Nano is a trustless, low-latency cryptocurrency that utilizes a novel block-lattice architecture, where each account has its own blockchain and achieves consensus via delegated Proof of Stake voting. The network requires minimal resources, no high-power mining hardware, and can process high transaction throughput.</p>
       </div>
     </div>
     <div class="wrap-2">
       <div class="left-1">
-        <h2 class="heading-2">Where can I buy Nano?</h2>
+        <h2 class="heading-2">Where to buy Nano?</h2>
         <p class="paragraph-2">Nano is listed on a few major cryptocurrency exchanges, such as Binance, Kucoin, and Nanex. On these exchanges you can buy Nano with BTC, ETH, USDT, DOGE and many more. If you prefer to buy directly with fiat, Nano is listed in LBX and N.Exchange.</p>
       </div>
       <div class="right-1"><img src="images/nano_where_to_buy.png" width="240" srcset="images/nano_where_to_buy-p-500.png 500w, images/nano_where_to_buy.png 536w" sizes="(max-width: 479px) 72vw, (max-width: 767px) 74vw, (max-width: 991px) 32vw, 36vw" class="screenshot screenshot-what" style="width:60%;"></div>
