--- a/public/index.html
+++ b/public/index.html
@@ -87,10 +87,10 @@
       <h2 class="heading-2">Where to store Nano?</h2>
       <p class="subhead-3">Nano has many options of desktop, mobile and web wallets. There is a wide array of choices when it comes to secure wallets. It’s up to you to pick your favourite.<br></p>
       <div class="wrap-store w-row">
-        <div class="w-col w-col-3 w-col-stack"><a href="https://nanowalletcompany.com/" target="_blank" class="btn nwc w-inline-block" onclick="ga('send', 'event', 'OutBoundClick', 'Click', 'Nanowalletcompany');"><img src="images/NANO-wallet.png" srcset="images/NANO-wallet-p-500.png 500w, images/NANO-wallet.png 561w" sizes="125px" class="btn-logo"></a></div>
-        <div class="w-col w-col-3 w-col-stack"><a href="https://getcanoe.io/" target="_blank" class="btn canoe w-inline-block"  onclick="ga('send', 'event', 'OutBoundClick', 'Click', 'Canoe');"><img src="images/canoe-logo.svg" class="btn-logo"></a></div>
+        <div class="w-col w-col-3 w-col-stack"><a href="https://nanowalletcompany.com/" target="_blank" class="btn nwc w-inline-block"><img src="images/NANO-wallet.png" srcset="images/NANO-wallet-p-500.png 500w, images/NANO-wallet.png 561w" sizes="125px" class="btn-logo"></a></div>
+        <div class="w-col w-col-3 w-col-stack"><a href="https://getcanoe.io/" target="_blank" class="btn canoe w-inline-block"><img src="images/canoe-logo.svg" class="btn-logo"></a></div>
         <div class="w-col w-col-3 w-col-stack">
-          <a href="https://nanowallet.io/" target="_blank" class="btn nanowalletio w-inline-block"  onclick="ga('send', 'event', 'OutBoundClick', 'Click', 'Nanowallet');">
+          <a href="https://nanowallet.io/" target="_blank" class="btn nanowalletio w-inline-block">
             <p class="btn-text text-nanowallet">NanoWallet.io</p>
           </a>
         </div>
