add where can I get nano buttons

--- a/public/index.html
+++ b/public/index.html
@@ -76,12 +76,25 @@
     </div>
     <div class="wrap-2">
       <div class="left-1">
-        <h2 class="heading-2">Where to buy Nano?</h2>
-        <p class="paragraph-2">Nano is listed on a few major cryptocurrency exchanges, such as Binance, Kucoin, and Nanex. On these exchanges you can buy Nano with BTC, ETH, USDT, DOGE and many more. If you prefer to buy directly with fiat, Nano is listed in LBX and N.Exchange.</p>
+        <h2 class="heading-2">Where can I get Nano?</h2>
+        <p class="paragraph-2">Nano is listed on a few major cryptocurrency exchanges, such as Binance, Kucoin and Nanex. On these exchanges you can buy Nano with Bitcoin or Ethereum. If you prefer to buy with fiat, Nano is listed on LBX and N.Exchange.</p>
+        <div class="button-list">
+          <a href="https://binance.com" target="_blank" class="button">
+            Binance
+          </a>
+          <a href="https://www.kucoin.com" target="_blank" class="button">
+            Kucoin
+          </a>
+          <a href="https://nanex.co" target="_blank" class="button">
+            Nanex
+          </a>
+        </div>
+        <p class="paragraph-2">Or <strong><a href="https://www.nanofaucet.org/?campaign=AdWordsVideo" target="_blank" class="no-underline text-brand">click here to try out Nano for free using a Nano faucet</a></strong></p>
       </div>
       <div class="right-1"><img src="images/nano_where_to_buy.png" width="240" srcset="images/nano_where_to_buy-p-500.png 500w, images/nano_where_to_buy.png 536w" sizes="(max-width: 479px) 72vw, (max-width: 767px) 74vw, (max-width: 991px) 32vw, 36vw" class="screenshot screenshot-what" style="width:60%;"></div>
     </div>
   </div>
+
   <div class="store">
     <div class="wrap-1">
       <h2 class="heading-2">Where to store Nano?</h2>
@@ -94,10 +107,11 @@
             <p class="btn-text text-nanowallet">NanoWallet.io</p>
           </a>
         </div>
-        <div class="w-col w-col-3 w-col-stack"><a href="https://nanovault.io/" target="_blank" class="btn nanovault w-inline-block"  onclick="ga('send', 'event', 'OutBoundClick', 'Click', 'Nanovault');"><img src="images/37244091-1e161088-2484-11e8-9697-80013de58ea6.png" srcset="images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-500.png 500w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-800.png 800w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-1080.png 1080w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-1600.png 1600w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-2000.png 2000w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-2600.png 2600w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6.png 3200w" sizes="30px" class="btn-logo"><p class="btn-text">NanoVault</p></a></div>
+        <div class="w-col w-col-3 w-col-stack"><a href="https://nanovault.io/" target="_blank" class="btn nanovault w-inline-block"><img src="images/37244091-1e161088-2484-11e8-9697-80013de58ea6.png" srcset="images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-500.png 500w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-800.png 800w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-1080.png 1080w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-1600.png 1600w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-2000.png 2000w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-2600.png 2600w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6.png 3200w" sizes="30px" class="btn-logo"><p class="btn-text">NanoVault</p></a></div>
       </div>
     </div>
   </div>
+
   <div class="footer-bottom">
     <div class="footer-bottom-wrap">
       <div class="legal">© 2018, Nano Center. All Rights Reserved.</div>
