--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,12 @@
           <a href="https://nanex.co" target="_blank" class="button">
             Nanex
           </a>
+          <a href="https://lbx.com" target="_blank" class="button">
+            LBX
+          </a>
+          <a href="https://n.exchange" target="_blank" class="button">
+            N.Exchange
+          </a>
         </div>
         <p class="paragraph-2">Or <strong><a href="https://www.nanofaucet.org/?campaign=AdWordsVideo" target="_blank" class="no-underline text-brand">click here to try out Nano for free using a Nano faucet</a></strong></p>
       </div>
