--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
     <div class="wrap-2">
       <div class="left-1">
         <h2 class="heading-2">What is Nano?</h2>
-        <p class="paragraph-2">Nano is a digital currency for the real world - the fast and free way to pay for everything in life. It features instant transactions, zero fees and is infinitely scalable. Gone are the days of complicated and energy-inefficient transactions - Nano is <span class="text-span">green </span>and easy to use.</p>
+        <p class="paragraph-2">Nano is a digital currency for the real world - the fast and free way to pay for everything in life. It features ultra fast transactions, zero fees and is infinitely scalable. Gone are the days of complicated and energy-inefficient transactions - Nano is <span class="text-span">green </span>and easy to use.</p>
       </div>
       <div class="right-1"><img src="images/nano_earth.png" width="240" srcset="images/nano_earth-p-500.png 500w, images/nano_earth-p-800.png 800w, images/nano_earth-p-1080.png 1080w, images/nano_earth.png 1244w" sizes="(max-width: 479px) 72vw, (max-width: 767px) 74vw, (max-width: 991px) 32vw, 36vw" class="screenshot screenshot-what" style="width: 80%;"></div>
     </div>
@@ -120,7 +120,7 @@
 
   <div class="footer-bottom">
     <div class="footer-bottom-wrap">
-      <div class="legal">© 2018, Nano Center. All Rights Reserved.</div>
+      <div class="legal">© 2019, Nano Center. All Rights Reserved.</div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
