--- a/public/index.html
+++ b/public/index.html
@@ -71,13 +71,13 @@
       <div class="left-2"><img src="images/nano_block_lattice.png" width="240" srcset="images/nano_block_lattice-p-500.png 500w, images/nano_block_lattice.png 648w" sizes="(max-width: 479px) 85vw, 240px" class="screenshot" style=""></div>
       <div class="right-2">
         <h2 class="heading-2">What makes Nano?</h2>
-        <p class="paragraph-2">Nano is a trustless, low-latency cryptocurrency that utilizes a novel block-lattice architecture, where each account has its own blockchain and achieves consensus via delegated Proof of Stake voting. The network requires minimal resources, no high-power mining hardware, and can process high transaction throughput.</p>
+        <p class="paragraph-2">Nano is a trustless, low-latency digital currency that utilizes a novel block-lattice architecture, where each account has its own blockchain and achieves consensus via delegated Proof of Stake voting. The network requires minimal resources, no high-power mining hardware, and can process high transaction throughput.</p>
       </div>
     </div>
     <div class="wrap-2">
       <div class="left-1">
         <h2 class="heading-2">Where can I get Nano?</h2>
-        <p class="paragraph-2">Nano is listed on a few major cryptocurrency exchanges, such as Binance, Kucoin and Nanex. On these exchanges you can buy Nano with Bitcoin or Ethereum. If you prefer to buy with fiat, Nano is listed on LBX and N.Exchange.</p>
+        <p class="paragraph-2">Nano is listed on a few major exchanges, such as Binance, Kucoin and Nanex. On these exchanges you can buy Nano with Bitcoin or Ethereum. If you prefer to buy with fiat, Nano is listed on LBX and N.Exchange.</p>
         <div class="button-list">
           <a href="https://binance.com" target="_blank" class="button">
             Binance
