--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
     <div class="wrap-2">
       <div class="left-1">
         <h2 class="heading-2">Where can I get Nano?</h2>
-        <p class="paragraph-2">Nano is listed on a few major exchanges, such as Binance, Kucoin and Nanex. On these exchanges you can buy Nano with Bitcoin or Ethereum. If you prefer to buy with fiat, Nano is listed on LBX and N.Exchange.</p>
+        <p class="paragraph-2">Nano is listed on a few major exchanges, such as Binance, Okex, Houbi , KuCoin & Bit Z.</p>
         <div class="button-list">
           <a href="https://binance.com" target="_blank" class="button">
             Binance
