--- a/public/index.html
+++ b/public/index.html
@@ -82,20 +82,20 @@
           <a href="https://binance.com" target="_blank" class="button">
             Binance
           </a>
-          <a href="https://www.kucoin.com" target="_blank" class="button">
-            Kucoin
+          <a href="https://www.okex.com" target="_blank" class="button">
+            Okex
           </a>
-          <a href="https://nanex.co" target="_blank" class="button">
-            Nanex
+          <a href="https://www.huobi.com/" target="_blank" class="button">
+            Huobi
           </a>
-          <a href="https://lbx.com" target="_blank" class="button">
-            LBX
+          <a href="https://www.kucoin.com/" target="_blank" class="button">
+            KuCoin
           </a>
-          <a href="https://n.exchange" target="_blank" class="button">
-            N.Exchange
+          <a href="https://www.bit-z.com/" target="_blank" class="button">
+            Bit-Z
           </a>
         </div>
-        <p class="paragraph-2">Or <strong><a href="https://www.nanofaucet.org/?campaign=AdWordsVideo" target="_blank" class="no-underline text-brand">click here to try out Nano for free using a Nano faucet</a></strong></p>
+        <p class="paragraph-2">Or <strong><a href="https://nano-faucet.org/?utm_source=nanocenter&utm_medium=link&utm_campaign=GoogleBannerAd" target="_blank" class="no-underline text-brand">click here to try out Nano for free using a Nano faucet</a></strong></p>
       </div>
       <div class="right-1"><img src="images/nano_where_to_buy.png" width="240" srcset="images/nano_where_to_buy-p-500.png 500w, images/nano_where_to_buy.png 536w" sizes="(max-width: 479px) 72vw, (max-width: 767px) 74vw, (max-width: 991px) 32vw, 36vw" class="screenshot screenshot-what" style="width:60%;"></div>
     </div>
