--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,9 @@
           </a>
         </div>
         <p class="paragraph-2">Or <strong><a href="https://nano-faucet.org/?utm_source=nanocenter&utm_medium=link&utm_campaign=GoogleBannerAd" target="_blank" class="no-underline text-brand">click here to try out Nano for free using a Nano faucet</a></strong></p>
+          <a href="https://nano-faucet.org/?utm_source=nanocenter&utm_medium=link&utm_campaign=GoogleBannerAd" target="_blank" class="button">
+            Faucet Free Nano
+          </a>
       </div>
       <div class="right-1"><img src="images/nano_where_to_buy.png" width="240" srcset="images/nano_where_to_buy-p-500.png 500w, images/nano_where_to_buy.png 536w" sizes="(max-width: 479px) 72vw, (max-width: 767px) 74vw, (max-width: 991px) 32vw, 36vw" class="screenshot screenshot-what" style="width:60%;"></div>
     </div>
