--- a/public/index.html
+++ b/public/index.html
@@ -95,10 +95,10 @@
             Bit-Z
           </a>
         </div>
-        <p class="paragraph-2">Or <strong><a href="https://nano-faucet.org/?utm_source=nanocenter&utm_medium=link&utm_campaign=GoogleBannerAd" target="_blank" class="no-underline text-brand">click here to try out Nano for free using a Nano faucet</a></strong></p>
+        <p class="paragraph-2">Or try out Nano for free using a Nano faucet</p>
           <div class="button-list">
         <a href="https://nano-faucet.org/?utm_source=nanocenter&utm_medium=link&utm_campaign=GoogleBannerAd" target="_blank" class="button-faucet">
-            Faucet Free Nano
+            Nano-Faucet.org
           </a>
         </div>
       </div>
