update wallet buttons

--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,7 @@
       <h2 class="heading-2">Where to store Nano?</h2>
       <p class="subhead-3">Nano has many options of desktop, mobile and web wallets. There is a wide array of choices when it comes to secure wallets. It’s up to you to pick your favourite.<br></p>
       <div class="wrap-store w-row">
+        <div class="w-col w-col-3 w-col-stack"><a href="https://natrium.io/" target="_blank" class="btn natrium w-inline-block"><img src="images/natrium-wallet.png" srcset="images/natrium-wallet-p-500.png 500w, images/natrium-wallet.png 561w" sizes="125px" class="btn-logo"></a></div>
         <div class="w-col w-col-3 w-col-stack"><a href="https://nanowalletcompany.com/" target="_blank" class="btn nwc w-inline-block"><img src="images/NANO-wallet.png" srcset="images/NANO-wallet-p-500.png 500w, images/NANO-wallet.png 561w" sizes="125px" class="btn-logo"></a></div>
         <div class="w-col w-col-3 w-col-stack"><a href="https://getcanoe.io/" target="_blank" class="btn canoe w-inline-block"><img src="images/canoe-logo.svg" class="btn-logo"></a></div>
         <div class="w-col w-col-3 w-col-stack">
@@ -118,7 +119,6 @@
             <p class="btn-text text-nanowallet">NanoWallet.io</p>
           </a>
         </div>
-        <div class="w-col w-col-3 w-col-stack"><a href="https://nanovault.io/" target="_blank" class="btn nanovault w-inline-block"><img src="images/37244091-1e161088-2484-11e8-9697-80013de58ea6.png" srcset="images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-500.png 500w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-800.png 800w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-1080.png 1080w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-1600.png 1600w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-2000.png 2000w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6-p-2600.png 2600w, images/37244091-1e161088-2484-11e8-9697-80013de58ea6.png 3200w" sizes="30px" class="btn-logo"><p class="btn-text">NanoVault</p></a></div>
       </div>
     </div>
   </div>
